--- a/example.env
+++ b/example.env
@@ -1,3 +1,5 @@
 DATABASE_URL="<mongodb-url>"
 BCRYPT_SALT_ROUNDS=<number-of-salt-rounds-for-hashing-password>
 JWT_SECRET_KEY=<your-jwt-key>
+JWT_EXPIRES_IN=<expire-time?
+PORT=<port>
