:whale: Add virtualization

--- a/example.env
+++ b/example.env
@@ -3,3 +3,6 @@ BCRYPT_SALT_ROUNDS=<number-of-salt-rounds-for-hashing-password>
 JWT_SECRET_KEY=<your-jwt-key>
 JWT_EXPIRES_IN=<expire-time?
 PORT=<port>
+MONGO_USERNAME=<mongo-user>
+MONGO_PASSWORD=<mongo-password>
+MONGO_DATABASE=<mongo-db>
